# KrakenChoice

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
src/: mcdm_base.py
src/complex/: AHP.ipynb  AHP.py
src/kraken_choice/: krakenchoice.py
src/madm/: __init__.py
src/ranking/: __init__.py  dematel.ipynb  dematel.py  electre.ipynb  electre.py  moora.ipynb  moora.py  saw.py  smart.py  topsis.py  vikor.py
src/weighting/: bwm.py  entropy.py
